# TaskTrackerCLI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg
scripts/: generate_dummy_tasks.py
task_tracker/: commands.py  main.py  styles.py  task_storage.py
tests/: factory.py  tests.py
