[project]
name = "tasktrackercli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.9.0",
    "factory-boy>=3.3.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "questionary>=2.1.1",
    "typer>=0.19.2",
]
