[project]
name = "task-tracker-cli"
version = "0.1.0"
description = "Basic task tracker CLI application built with Typer"
authors = [
    { name = "Filip Mravic", email = "filip@iconis.hr" }
]
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "questionary>=2.1.1",
    "typer>=0.19.2",
    "pytest>=8.4.2",
    "coverage>=7.10.7",
    "factory-boy>=3.3.3",
]




[project.scripts]
tasktracker = "task_tracker.commands:app"
